fixed search bar & search icon alignment fixed left panel small text padding

--- a/src/less/left-panel.less
+++ b/src/less/left-panel.less
@@ -93,7 +93,7 @@
 					.text-center();
 					display: block;
 					color: @lava-gray-light;
-					padding: 0.545em 3em .545em 2em;
+					padding: 0 3.3rem .7rem 2.2rem;
 				}
 				button{
 					.text-left();
