--- a/src/less/mail-list.less
+++ b/src/less/mail-list.less
@@ -1,4 +1,12 @@
 #mail-list{
+
+	#top-search{
+		padding-left: 0;
+		transition: .3s all;
+		&:focus{
+			padding-left: 1.1rem;
+		}
+	}
 	
 	.mail-list-group{
 		position: absolute;
@@ -163,8 +171,7 @@
 		[class^="icon-"],
 		[class*=" icon-"]{
 			line-height: 4.4rem;
-			font-size: 2.2rem;
-			padding: 0 0 0 1.2rem;
+			padding: 0 0.53rem 0 .3rem;
 		}
 	}
 
